--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Etch-a-Sketch</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <script>
+        <div id="container">
 
+        </div>
+        <script src="script.js">
         </script>
     </body>
 </html>
