--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div id="container">
+            <button id="reset">Reset</button>
+            <div id="drawPad">
 
+            </div>
         </div>
         <script src="script.js">
         </script>
